--- a/Moringa_Data_Science_Prep_W4_Independent_Project_2021_09_Joseph_Kiburu_Python_Notebook.ipynb
+++ b/Moringa_Data_Science_Prep_W4_Independent_Project_2021_09_Joseph_Kiburu_Python_Notebook.ipynb
@@ -6,7 +6,7 @@
       "name": "Moringa_Data_Science_Prep_W4_Independent_Project_2021_09_Joseph_Kiburu_Python_Notebook",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6CZnbLYbb42VQ5BNGp6S7",
+      "authorship_tag": "ABX9TyPyr+sTcEIv8TiSfyAB7/xM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "# import our numpy library\n",
         "import numpy as np\n"
       ],
-      "execution_count": 30,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
           "height": 742
         },
         "id": "FrURt7eLLJ4S",
-        "outputId": "3c9b733a-6d6c-4467-c503-57f4eaf7865b"
+        "outputId": "c41b1688-0f31-4882-be36-2443bd1184c3"
       },
       "source": [
         "# loading our csv dataset\n",
@@ -62,7 +62,7 @@
         "df= pd.read_csv(url)\n",
         "df.head(10)"
       ],
-      "execution_count": 31,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +415,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 55
         }
       ]
     },
@@ -430,7 +430,7 @@
         "df.drop(['Displayed comment', 'Scheduled at','Public name', 'Rental status',\t'Slots', 'Status', 'Subscription status', \n",
         "         'Charge Slots','Charging Status', 'ID', 'Kind'], axis=1, inplace=True)"
       ],
-      "execution_count": 32,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -443,7 +443,7 @@
         "\n",
         "df.columns=df.columns.str.strip()\n"
       ],
-      "execution_count": 33,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -453,14 +453,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OB_VXIvXMthd",
-        "outputId": "e749f4a2-d05f-4076-adc2-f0509695cfc9"
+        "outputId": "916d1596-8f2a-4208-af6c-12d6bc6fccd9"
       },
       "source": [
         "# looking for any missing values\n",
         "\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 34,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +484,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 58
         }
       ]
     },
@@ -495,14 +495,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aLX6BLhcMty7",
-        "outputId": "d7ded330-aebd-4c28-a508-87e86a374d18"
+        "outputId": "c359cb14-242e-4470-82d0-dfc16d31598f"
       },
       "source": [
         "# checking for any duplicates\n",
         "\n",
         "df.duplicated()"
       ],
-      "execution_count": 35,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 59
         }
       ]
     },
@@ -534,14 +534,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LjtpXJICnKP_",
-        "outputId": "bd0f11bc-b086-4f4c-f56d-1abdb4a481b4"
+        "outputId": "87857577-135d-4651-f81d-085706990a51"
       },
       "source": [
         "# checking the number of rows and columns before dropping the duplicates\n",
         "\n",
         "df.shape"
       ],
-      "execution_count": 36,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +551,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 60
         }
       ]
     },
@@ -563,14 +563,14 @@
           "height": 564
         },
         "id": "QHgnhFQUMt_I",
-        "outputId": "faa44b10-8dd6-4b58-a2c0-2a23fb3242a6"
+        "outputId": "af3348a4-90b3-4e8f-d63c-53ed8a45aaaa"
       },
       "source": [
         "# if any duplicate, lets drop them\n",
         "\n",
         "df.drop_duplicates()"
       ],
-      "execution_count": 37,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,7 +821,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 61
         }
       ]
     },
@@ -832,14 +832,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9xD149EYnpBy",
-        "outputId": "a1dc544e-ac4d-4965-9c4d-6cdf6a56b61c"
+        "outputId": "fb66e1d3-9de2-4d5d-86a3-d078e2c962bc"
       },
       "source": [
         "# checking the number of rows and columns after dropping the duplicates\n",
         "\n",
         "df.shape"
       ],
-      "execution_count": 38,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -849,7 +849,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 62
         }
       ]
     },
@@ -861,7 +861,7 @@
       "source": [
         "# turns out there were no duplicates since there is no change in the number of rows and columns"
       ],
-      "execution_count": 39,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -872,7 +872,7 @@
           "height": 252
         },
         "id": "ewDcvjgmMuDa",
-        "outputId": "75bc9514-4ac3-412a-8ceb-91cd7996af46"
+        "outputId": "c5bb7564-d7c6-441e-a19c-54ad7f7c9ee6"
       },
       "source": [
         "# for uniformity in our table we are going to use the string replace function\n",
@@ -880,7 +880,7 @@
         "df.columns = df.columns.str.replace(' ', '_').str.lower()\n",
         "df.head(5)"
       ],
-      "execution_count": 40,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1022,7 +1022,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 64
         }
       ]
     },
@@ -1034,7 +1034,7 @@
           "height": 414
         },
         "id": "eoZ4p3AZMuIU",
-        "outputId": "da513470-7403-41b9-dbe4-73f7b048235e"
+        "outputId": "2cf78e2c-529d-44ae-de58-090ade1ad38b"
       },
       "source": [
         "# before identifying the most popular hour of the day for picking up a bluecar,\n",
@@ -1043,7 +1043,7 @@
         "new_df=df[['bluecar_counter', 'city', 'year', 'month', 'hour']]\n",
         "new_df"
       ],
-      "execution_count": 41,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1186,7 +1186,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 65
         }
       ]
     },
@@ -1198,7 +1198,7 @@
           "height": 414
         },
         "id": "qIdaE_xZvQeN",
-        "outputId": "9ea4f636-e890-49f2-da03-6ad1acbe57a2"
+        "outputId": "48020cf4-a3f2-434d-be34-8b04496e41ef"
       },
       "source": [
         "# after that we specify the values in each column \n",
@@ -1206,7 +1206,7 @@
         "new_df=new_df[(new_df['city']=='Paris') & (new_df['month']==4) & (new_df['year']==2018)]\n",
         "new_df\n"
       ],
-      "execution_count": 42,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1349,7 +1349,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 66
         }
       ]
     },
@@ -1360,24 +1360,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5aCxqjiSMyNb",
-        "outputId": "d3f726c5-ce77-4ead-a121-4f8fe308dd61"
+        "outputId": "4190ff7b-6a92-4b82-93fb-0e0ee8a243a1"
       },
       "source": [
         "# finding the median to have a central value to work with when answering the questions\n",
         "\n",
-        "new_df['bluecar_counter'].median()"
+        "df['bluecar_counter'].median()"
       ],
-      "execution_count": 43,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.0"
+              "2.0"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 67
         }
       ]
     },
@@ -1389,7 +1389,7 @@
           "height": 414
         },
         "id": "Rt_r-vIlMuqr",
-        "outputId": "88ae5392-c305-4504-ef02-655f3c5e7b57"
+        "outputId": "d465485c-a336-4c8a-a9b5-58004fd2c167"
       },
       "source": [
         "#Identifying the most popular hour of the day for picking up a shared bluecar\n",
@@ -1398,10 +1398,10 @@
         "# we will have to look at column values with a lower number of cars to answer our\n",
         "# question of finding the most popular hour\n",
         "\n",
-        "hour=new_df[(new_df['bluecar_counter'] <= 3)]\n",
+        "hour=new_df[(new_df['bluecar_counter'] <= 1)]\n",
         "hour"
       ],
-      "execution_count": 44,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1442,22 +1442,6 @@
               "      <td>11</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>3</td>\n",
-              "      <td>Paris</td>\n",
-              "      <td>2018</td>\n",
-              "      <td>4</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>3</td>\n",
-              "      <td>Paris</td>\n",
-              "      <td>2018</td>\n",
-              "      <td>4</td>\n",
-              "      <td>17</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>0</td>\n",
               "      <td>Paris</td>\n",
@@ -1474,6 +1458,22 @@
               "      <td>18</td>\n",
               "    </tr>\n",
               "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Paris</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>4</td>\n",
+              "      <td>22</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>0</td>\n",
+              "      <td>Paris</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
               "      <th>...</th>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -1482,12 +1482,12 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4985</th>\n",
-              "      <td>2</td>\n",
+              "      <th>4983</th>\n",
+              "      <td>1</td>\n",
               "      <td>Paris</td>\n",
               "      <td>2018</td>\n",
               "      <td>4</td>\n",
-              "      <td>2</td>\n",
+              "      <td>9</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4990</th>\n",
@@ -1523,28 +1523,28 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>2206 rows × 5 columns</p>\n",
+              "<p>1479 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
               "      bluecar_counter   city  year  month  hour\n",
               "0                   0  Paris  2018      4    11\n",
-              "3                   3  Paris  2018      4     4\n",
-              "4                   3  Paris  2018      4    17\n",
               "5                   0  Paris  2018      4     7\n",
               "6                   0  Paris  2018      4    18\n",
+              "8                   1  Paris  2018      4    22\n",
+              "10                  0  Paris  2018      4     4\n",
               "...               ...    ...   ...    ...   ...\n",
-              "4985                2  Paris  2018      4     2\n",
+              "4983                1  Paris  2018      4     9\n",
               "4990                0  Paris  2018      4    21\n",
               "4992                0  Paris  2018      4    23\n",
               "4994                0  Paris  2018      4    20\n",
               "4997                1  Paris  2018      4     7\n",
               "\n",
-              "[2206 rows x 5 columns]"
+              "[1479 rows x 5 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 74
         }
       ]
     },
@@ -1555,7 +1555,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oJHcpIM1MutA",
-        "outputId": "2db8e4bf-3bc5-4f7f-f0e9-fcbd09f45a91"
+        "outputId": "e230b079-eac4-4d11-a0cc-a2f1e79da5df"
       },
       "source": [
         "# now to find out the hour that appears the most during periods where number of bluecars\n",
@@ -1564,7 +1564,7 @@
         "\n",
         "hour['hour'].mode()"
       ],
-      "execution_count": 45,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1575,7 +1575,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 75
         }
       ]
     },
@@ -1587,7 +1587,7 @@
           "height": 414
         },
         "id": "7sKVlioGMuv4",
-        "outputId": "4c9f9348-5ca4-4944-968d-94b4d4ef95ee"
+        "outputId": "e9befee8-5220-4f0b-8fc0-9de1de69621d"
       },
       "source": [
         "# the most popular hour for returning cars\n",
@@ -1597,7 +1597,7 @@
         "hour=new_df[(new_df['bluecar_counter']>=3)]\n",
         "hour"
       ],
-      "execution_count": 46,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1740,7 +1740,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 72
         }
       ]
     },
@@ -1751,7 +1751,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TB-6Z3WMMuyQ",
-        "outputId": "5b261a91-f53c-4bf0-c342-03921c5970fb"
+        "outputId": "ac516333-0f01-4e1d-d869-cc3b45b7f328"
       },
       "source": [
         "# now finding the hour that appears the most \n",
@@ -1760,7 +1760,7 @@
         "\n",
         "# we get the most popular hour for returning cars is 6 hours"
       ],
-      "execution_count": 47,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1771,7 +1771,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 73
         }
       ]
     },
